<resources>
    <string name="app_name">Star Wars Universe</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="placeholder_text_profile">Заглушка для экрана \"Профиль\"</string>
    <string name="placeholder_text_faves">Заглушка для экрана \"Избранное\"</string>
    <string name="title_favourites">Избранное</string>
    <string name="title_profile">Профиль</string>
    <string name="title_movies">Фильмы</string>
    <string name="recieve_error">Не удалось загрузить данные, проверьте подключение к интернету</string>
    <string name="characters">Персонажи</string>
    <string name="other">Прочее</string>
    <string name="planets">Планеты</string>
    <string name="info">Информация</string>
    <string name="no_data">Нет данных</string>
    <string name="enter_search_query">Введите запрос</string>
    <string name="climate">Климат: %1$s</string>
    <string name="population">Население: %1$s</string>
    <string name="type">Тип местности: %1$s</string>
    <string name="gravity">Гравитация: %1$s</string>
    <string name="diameter">Диаметр: %1$s</string>
</resources>