<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_movies">

    <fragment
        android:id="@+id/navigation_movies"
        android:name="com.css101.starwarsuniverse.presentation.movies.MoviesFragment"
        android:label="@string/title_movies"
        tools:layout="@layout/fragment_movies" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.css101.starwarsuniverse.presentation.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_favourites"
        android:name="com.css101.starwarsuniverse.presentation.favourites.FavouritesFragment"
        android:label="@string/title_favourites"
        tools:layout="@layout/fragment_favourites" />
</navigation>